--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ GENERATE_SOURCEMAP=false
 REACT_APP_AZURE_TENANT_ID="63ff6245-38e3-4eba-82ee-35504d8f0983"
 REACT_APP_FIREBASE_API_KEY="AIzaSyCZTTV_0zmetjc9MDAusZkkv_WmK9KEz8E"
 REACT_APP_FIREBASE_AUTH_DOMAIN="vismayo-cfb15.firebaseapp.com"
+REACT_APP_FIREBASE_DATABASE_URL="https://vismayo-cfb15.firebaseio.com"
