--- a/package.json
+++ b/package.json
@@ -51,5 +51,10 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.2.6"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
