--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@azure/msal-browser": "^2.37.0",
     "@azure/msal-node": "^1.17.2",
     "@azure/msal-react": "^1.5.3",
     "@heroicons/react": "^2.0.15",
