--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@azure/msal-node": "^1.16.0",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
   }
 }
