--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "buffer": "^6.0.3",
     "concurrently": "^8.0.1",
     "dateformat": "^5.0.3",
+    "dotenv": "^16.0.3",
     "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
