--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "visma",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "@azure/msal-browser": "^2.37.0",
     "@azure/msal-node": "^1.17.2",
