--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "dotenv": "^16.0.3",
     "dotenv-webpack": "^8.0.1",
     "firebase": "^9.17.1",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "remixicon": "^2.5.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwind-typewriter": "^1.0.1",
