--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.2",
     "buffer": "^6.0.3",
     "concurrently": "^8.0.1",
+    "crypto-browserify": "^3.12.0",
     "dateformat": "^5.0.3",
     "dotenv": "^16.0.3",
     "dotenv-webpack": "^8.0.1",
