--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "axios": "^1.3.2",
     "buffer": "^6.0.3",
     "concurrently": "^8.0.1",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "dateformat": "^5.0.3",
     "dotenv": "^16.0.3",
     "dotenv-webpack": "^8.0.1",
+    "express": "^4.18.2",
     "firebase": "^9.17.1",
     "net": "^1.0.2",
     "node-polyfill-webpack-plugin": "^2.0.1",
+    "nodemon": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
@@ -30,14 +33,12 @@
     "remixicon": "^2.5.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwind-typewriter": "^1.0.1",
-    "web-vitals": "^2.1.4",
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "react-scripts start",
     "start": "cd server && node index.js",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
