--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "dev": "react-scripts start",
-    "start": "npm run build && (cd server && node index.js)",
+    "start": "cd server && node index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
